(library
 (name sites_locations_plugins)
 (public_name dune-sites-locations.plugins)
 (modules_without_implementation sites_locations_plugins_data)
 (special_builtin_support
  (sites_locations
   (plugins)
   (data_module sites_locations_plugins_data)))
 (libraries dune-sites-locations dune-private-libs.meta_parser dynlink))
